compiler/tests/should-fail/NoApplicableProtocol.via
/* NoApplicableProtocolError */

host alice

fun main() {
    val tooIntegral: int{alice ∧ B<-} = 42;
}
